# crewai-deep-research

./: .gitignore  README.md  final_report.md  pyproject.toml
knowledge/: user_preference.txt
src/drcrew/: crew.py  main.py
src/drcrew/config/: agents.yaml  tasks.yaml
src/drcrew/tools/: api_tools.py  citation_tools.py  nlp_tools.py  visualiation_tools.py
