[project]
name = "drcrew"
version = "0.1.0"
description = "drcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
drcrew = "drcrew.main:run"
run_crew = "drcrew.main:run"
train = "drcrew.main:train"
replay = "drcrew.main:replay"
test = "drcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
